Adding tasks from template
