# src/main/api.yaml
@@ -140,12 +140,10 @@ paths:
                 $ref: '#/definitions/Account'
 
 
-  /tasks:
+  /templates/tasks:
     get:
       description: |
         Gets a list of generic tasks to use as a template
-      security:
-          - bearer: []
       responses:
         200:
           description: List of `Task`s matching the criteria specified
@@ -153,7 +151,6 @@ paths:
             $ref: '#/definitions/Tasks'
 
   /wedding:
-
     get:
        description: |
         Gets a wedding.
@@ -248,6 +245,25 @@ paths:
         200:
           description: Task has been deleted.
 
+
+  /wedding/clone/tasks:
+
+    post:
+      description: |
+        Creates a new `Task`
+      security:
+        - bearer: []
+      parameters:
+        - name: task
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/Task'
+      responses:
+        200:
+          description: The newly created `Task`
+          schema:
+            $ref: '#/definitions/Task'
 
 
 definitions:
